--- a/index.html
+++ b/index.html
@@ -70,13 +70,12 @@
                         <li class="menu__item"> <a class="menu__link link" href="#">Контакти</a></li>
                     </ul>
                 </nav>
-                <ul class="list">
+                <ul class="list menu-contact-wrap">
+                    <li class="menu__contact">
+                        <a class=" menu__mail link" href="tel:+380961111111 "> +38 096 111 11 11</a>
+                    </li>
                     <li class="menu__contact">
                         <a class="menu__contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                    </li>
-
-                    <li class="menu__contact">
-                        <a class=" menu__contacts link" href="tel:+380961111111 "> +38 096 111 11 11</a>
                     </li>
                 </ul>
                 <ul class="menu-soc list">
