--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         </svg> +38 096 111 11 11</a>
                 </li>
             </ul>
-            <button type="button" class="menu-open" data-mobile-open>
+            <button type="button" class="menu-open" data-menu-open>
                 <svg class="menu-open-icon" width="24" height="16">
                     <use href="./images/icons.svg/symbol-defs.svg#icon-menu"></use>
                 </svg>
@@ -55,8 +55,8 @@
         </div>
 
         <div>
-            <div class="mob-menu is-hidden" data-mobile>
-                <button type="button" class="menu-close" data-mobile-close>
+            <div class="mob-menu is-hidden" data-menu>
+                <button type="button" class="menu-close" data-menu-close>
                     <svg class="menu-close-icon" width="24" height="16">
                         <use href="./images/icons.svg/symbol-defs.svg#icon-close"></use>
                     </svg>
@@ -516,7 +516,7 @@
         </div>
     </div>
     <script src="./js/modal.js"></script>
-    <script src="./js/mobile.js"></script>
+    <script src="./js/menu.js"></script>
 </body>
 </body>
 
