--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
                         </svg> +38 096 111 11 11</a>
                 </li>
             </ul>
-            <button type="button" class="menu-open" data-mobile-open>
+            <button type="button" class="menu-open" data-menu-open>
                 <svg class="menu-open-icon" width="24" height="16">
                     <use href="./images/icons.svg/symbol-defs.svg#icon-menu"></use>
                 </svg>
@@ -54,8 +54,8 @@
         </div>
 
         <div>
-            <div class="mob-menu is-hidden" data-mobile>
-                <button type="button" class="menu-close" data-mobile-close>
+            <div class="mob-menu is-hidden" data-menu>
+                <button type="button" class="menu-close" data-menu-close>
                     <svg class="menu-close-icon" width="24" height="16">
                         <use href="./images/icons.svg/symbol-defs.svg#icon-close"></use>
                     </svg>
@@ -69,20 +69,19 @@
                         <li class="menu__item"> <a class="menu__link link" href="#">Контакти</a></li>
                     </ul>
                 </nav>
-                <ul class="list">
+                <ul class="list menu-contact-wrap">
+                    <li class="menu__contact">
+                        <a class=" menu__mail link" href="tel:+380961111111 "> +38 096 111 11 11</a>
+                    </li>
                     <li class="menu__contact">
                         <a class="menu__contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
-
-                    <li class="menu__contact">
-                        <a class=" menu__contacts link" href="tel:+380961111111 "> +38 096 111 11 11</a>
-                    </li>
                 </ul>
                 <ul class="menu-soc list">
-                    <li><a class="link menu-soc-link" href="#">Instagram</a></li>
-                    <li><a class="link menu-soc-link" href="#">Twitter</a></li>
-                    <li><a class="link menu-soc-link" href="#">Facebook</a></li>
-                    <li><a class="link menu-soc-link" href="#">LinkedIn</a></li>
+                    <li class="menu-soc-item"><a class="link menu-soc-link" href="#">Instagram</a></li>
+                    <li class="menu-soc-item"><a class="link menu-soc-link" href="#">Twitter</a></li>
+                    <li class="menu-soc-item"><a class="link menu-soc-link" href="#">Facebook</a></li>
+                    <li class="menu-soc-item"><a class="link menu-soc-link" href="#">LinkedIn</a></li>
                 </ul>
             </div>
         </div>
